--- a/src/main/resources/templates/th/askBoard/askBoardUpdate.html
+++ b/src/main/resources/templates/th/askBoard/askBoardUpdate.html
@@ -6,9 +6,9 @@
     <meta charset="UTF-8">
     <title>글 수정</title>
 
-    <script src="https://code.jquery.com/jquery-latest.js"></script>
+
     <script type="text/javascript" th:src="@{/editor/js/HuskyEZCreator.js}" charset="utf-8"></script>
-    <script type="text/javascript" th:src="@{/js/photoBoard.js}"></script>
+    <script type="text/javascript" th:src="@{/js/askBoard.js}"></script>
 </head>
 <body>
 <div layout:fragment="content">
