--- a/src/main/resources/templates/th/photoBoard/photoBoardMain.html
+++ b/src/main/resources/templates/th/photoBoard/photoBoardMain.html
@@ -7,6 +7,7 @@
     <title>커뮤니티메인</title>
     <th:block layout:fragment="css">
         <link rel="stylesheet" th:href="@{/css/mainContent.css}">
+        <link rel="stylesheet" th:href="@{/css/photoBoard.css}">
     </th:block>
 
     <script type="text/javascript" th:src="@{/js/photoBoard.js}"></script>
@@ -15,12 +16,15 @@
 <div layout:fragment="content">
     <div class="container store-index-section store-index-product-list"><h1>인기 사진</h1>
         <div class="form-group">
-            <button style="background-color: #ffffff; border: 0; outline: 0;" onclick="location.href='/photoBoardList'">전체보기</button>
+            <!--<button style="background-color: #ffffff; border: 0; outline: 0;" onclick="location.href='/photoBoardList'">전체보기</button>-->
+            <button class="button button--color-gray-4 button--size-30 button--shape-4 card-detail-writer__follow"
+                    onclick="location.href='/photoBoardList'" type="button">전체보기</button>
         </div>
         <div class="virtualized-list row" style="padding-top: 0px; transform: translateY(0px);">
             <tr th:each="rank : ${likerank}">
                 <div class="col-6 col-md-3 product-item-wrap">
-                    <article class="production-item"><a class="production-item__overlay" th:href="@{/photodetail/{photoBoardNo}(photoBoardNo=${rank.photoBoardNo})}"></a>
+                    <article class="production-item">
+                        <a class="production-item__overlay" th:href="@{/photodetail/{photoBoardNo}(photoBoardNo=${rank.photoBoardNo})}"></a>
                         <div class="production-item-image production-item__image">
                             <img class="image" alt="" th:src="@{'/uploadImg'+${rank.photoImg1}}" srcset="">
                             <input type="hidden" id="memberId" name="memberId" th:value="${rank.memberId}"/>
