--- a/src/main/resources/templates/th/askBoard/askBoardDetail.html
+++ b/src/main/resources/templates/th/askBoard/askBoardDetail.html
@@ -5,6 +5,9 @@
 <head>
     <meta charset="UTF-8">
     <title>질문 게시판</title>
+    <th:block layout:fragment="css">
+        <link rel="stylesheet" th:href="@{/css/askBoard.css}">
+    </th:block>
     <script type="text/javascript" th:src="@{/js/askBoard.js}"></script>
 </head>
 <body>
