--- a/src/main/resources/templates/th/member/basket/nonMemberBasket.html
+++ b/src/main/resources/templates/th/member/basket/nonMemberBasket.html
@@ -201,7 +201,7 @@
                                 <div class="commerce-cart__side-bar__order">
                                     <a href="/goPayment">
                                         <button class="button button--color-blue button--size-50 button--shape-4 commerce-cart__side-bar__order__btn"
-                                                type="submit" >1개 상품 구매하기
+                                                type="submit" >개 상품 구매하기
                                         </button>
                                     </a>
                                 </div>
