--- a/src/main/resources/templates/th/admin/statAdmin/spendingPattern.html
+++ b/src/main/resources/templates/th/admin/statAdmin/spendingPattern.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorator="th/layout/defaultLayout">
+      layout:decorator="th/layout/adminLayout">
 <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
 
